Use react-helmet to set title

--- a/src/css/_sidebar.scss
+++ b/src/css/_sidebar.scss
@@ -1,8 +1,8 @@
 .Sidebar {
-    position : fixed;
-    left     : 0;
-    top      : 0;
-    height   : 100%;
-    width    : 300px;
-    background: gray;
+    position   : fixed;
+    left       : 0;
+    top        : 0;
+    height     : 100%;
+    width      : 300px;
+    background : #fafafa;
 }
